assets/css/styles.css
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Montserrat', sans-serif;
}

#landing, #contact, #projects {
  height: 100vh;
}

#about, #members {
  height: auto;
}

h2 {
  font-weight: 700;
  font-style: italic;
  text-align: center;
}

a {
  text-decoration: none;
  color: #202020;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}

a:hover {
  text-decoration: none;
  color: #787878;
  -webkit-transition-timing-function: ease-in;
          transition-timing-function: ease-in;
}

nav {
  font-weight: 500;
}

.navbar.scrolled {
  background-color: #fff !important;
  -webkit-transition: background-color 200ms linear;
  transition: background-color 200ms linear;
}

.nav-link.active {
  font-weight: 700;
}

#particles-js {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
}

#landing-container {
  height: 75%;
}

.landing-text > h3 {
  font-weight: 800;
  font-size: 1.5rem;
}

.landing-text > h1 {
  font-weight: 800;
  text-transform: uppercase;
  font-size: 2rem;
}

.landing-text-bkd {
  background: #FFFFFF;
  padding: 0 0.75rem;
}

.contact-txt > h2 {
  font-weight: 800;
  font-size: 10px;
  background-color: white;
}

#about, #projects, #contact {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

#about {
  padding: 6.5em 0;
  flex-direction: column;
}

.about-img {
  width: 100%;
}

#about > h2, #projects {
  text-align: center;
}

.container > p {
  text-align: justify;
}


.article > h1 {
  font-weight: 700;
}

h5 {
  background: -webkit-gradient(linear, left top, left bottom, color-stop(65%, rgba(255, 255, 255, 0)), color-stop(65%, #FFD0AE));
  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 65%, #FFD0AE 65%);
  display: inline;
}

.half-background {
  background: -webkit-gradient(linear, left bottom, left top, color-stop(50%, yellow), color-stop(50%, transparent));
  background: linear-gradient(to top, yellow 50%, transparent 50%);
}

#members {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: top;
      -ms-flex-pack: top;
          justify-content: top;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: relative;
}

.labels {
  position: absolute;
  font-size: 10px;
}

.labels.left {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  left: 0;
  bottom: 0;
  padding-left: 4em;
}

.labels.right {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  top: 0;
  right: 0;
  padding-right: 4em;
}

.label-col {
  padding-left: 2em;
}

.label {
  margin-bottom: 0.25rem;
}

.label > span {
  font-style: italic;
}

.artpiece {
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
}

#art-container {
  position: relative;
  display: inline-block;
  /* <= shrinks container to image size */
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  transition: -webkit-transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
  top: 0;
  left: 0;
}

#art-container img {
  /* <= optional, for responsiveness */
  display: block;
  max-width: 100%;
  height: auto;
  -webkit-transition: all 300ms;
}

#art-container svg {
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 2;
}

.proj-title {
  position: absolute;
  top: 90%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.col-6 col-sm {
  position: relative;
  text-align: center;
  color: white;
}

.col-6 {
  position: relative;
  text-align: center;
  color: white;
}

.colored {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
}

.grayscale {
  position: relative;
  z-index: 0;
  -webkit-filter: grayscale(100%);
  top: 0;
  left: 0;
}

.clip {
  -webkit-clip-path: url(#myClip);
          clip-path: url(#myClip);
  -webkit-transition: 0.5s ease clip-path;
  transition: 0.5s ease clip-path;
}

.underline {
  background: -webkit-gradient(linear, left top, left bottom, color-stop(65%, rgba(255, 255, 255, 0)), color-stop(65%, #FFD0AE));
  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 65%, #FFD0AE 65%);
  display: inline;
}

#contact {
  position: relative;
  text-align: center;
}

#contact > .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

#red-string {
  position: absolute;
  top: 90px;
  left: 0;
}

#red-string img {
  height: 40vh;
}

#blue-string {
  position: absolute;
  bottom: 0;
  left: 0;
}

#blue-string img {
  height: 40vh;
}

#green-string {
  position: absolute;
  bottom: 0;
  right: 0;
}

#green-string img {
  height: 40vh;
}

#yellow-string {
  position: absolute;
  top: 90px;
  right: 0;
}

#yellow-string img {
  height: 30vh;
}

#contact-text {
  font-size: 2rem;
  width: 60vw;
}

.line {
  border: none;
  background-color: #202020;
  color: #ccc;
  height: 1.75px;
  width: 50px;
  margin: 0.75em 0;
}

.social-icons {
  font-size: 1.75rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 50vw;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.social-icons > a:nth-child(1):hover {
  color: #E06B65;
}

.social-icons > a:nth-child(2):hover {
  color: #FFFF99;
}

.social-icons > a:nth-child(3):hover {
  color: #99CC99;
}

.social-icons > a:nth-child(4):hover {
  color: #99CCFF;
}

footer {
  height: 10%;
  background-color: #787878;
}

@media (min-width: 768px) {
  .landing-text > h3 {
    font-size: 2rem;
  }
  .landing-text > h1 {
    font-size: 4rem;
  }
  .artpiece {
    -webkit-transform: none;
            transform: none;
  }
  #red-string img {
    height: 45vh;
  }
  #yellow-string img {
    height: 40vh;
  }
  #contact-text {
    font-size: 3rem;
    width: auto;
  }
  .line {
    height: 2px;
    width: 70px;
    margin: 1.5em 0;
  }
  .social-icons {
    font-size: 2.75rem;
    width: 40vw;
  }
}

@media (min-width: 992px) {
  .landing-text > h3 {
    font-size: 2rem;
  }
  .landing-text > h1 {
    font-size: 5rem;
  }
  #contact-text {
    font-size: 3.75rem;
  }
  .line {
    width: 80px;
  }
  .social-icons {
    font-size: 3rem;
    width: 25vw;
  }
  #red-string img {
    height: auto;
    width: 30vh;
  }
  #blue-string img {
    height: 45vh;
  }
  #green-string img {
    height: auto;
    width: 40vh;
  }
  #yellow-string img {
    height: 40vh;
  }
}

@media (min-width: 1200px) {
  .landing-text > h3 {
    font-size: 2rem;
  }
  .landing-text > h1 {
    font-size: 6rem;
  }
  #red-string img {
    height: auto;
    width: auto;
  }
  #blue-string img {
    height: auto;
  }
  #green-string img {
    height: auto;
    width: auto;
  }
  #yellow-string img {
    height: auto;
  }
}

.row {
  display: -ms-flexbox;
  /* IE10 */
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: wrap;
  /* IE10 */
  flex-wrap: wrap;
  padding: 10 10px;
  padding-bottom: 30px;
}

/* Create four equal columns that sits next to each other */
.column {
  -ms-flex: 25%;
  /* IE10 */
  -webkit-box-flex: 25%;
          flex: 25%;
  max-width: 25%;
  padding: 0 10px;
}

.column img {
  margin-top: 20px;
  vertical-align: middle;
  width: 100%;
}

.project-tile:hover {
  opacity: .5;
}

.grid-container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto auto auto auto auto;
  grid-template-columns: auto auto auto auto auto;
  grid-gap: 10px;
  padding: 10px;
}

.grid-container > div {
  text-align: center;
  padding: 20px 0;
  font-size: 30px;
}

#overview {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.overview-container {
  padding-top: 4vh;
  padding-right: 10vw;
  padding-left: 10vw;
}

.overview-container > p {
  font-size: 14px;
}

.project-overview-container {
  border-top-style: solid;
  border-top-width: 0.5px;
  border-top-color: gray;
  border-bottom-style: solid;
  border-bottom-width: 0.5px;
  border-bottom-color: gray;
  font-style: italic;
}

.project-content-container {
  border-bottom-style: solid;
  border-bottom-width: 0.5px;
  border-bottom-color: gray;
  font-style: italic;
}

.figcaption {
  font-size: 40px;
  font-style: italic;
}

u {
  text-decoration: none;
}

.project-nav-yellow:hover {
  background-color: #FFFF99;
}

.project-nav-green:hover {
  background-color: #99CC99;
}

.project-nav-blue:hover {
  background-color: #99CCFF;
}
/*# sourceMappingURL=styles.css.map */

